--- a/app/setting/setting.module.css
+++ b/app/setting/setting.module.css
@@ -1,7 +1,34 @@
-.setting {
+/* Mobile first */
+.wrapper {
+  display: flex;
+  flex-direction: column; /* спочатку sidebar зверху */
   width: 100%;
+  min-height: 100vh;
 }
 
 .imagesBlock {
+  flex: 1;
   width: 100%;
+}
+
+/* Tablet (приблизно ≥768px) */
+@media (min-width: 768px) {
+  .wrapper {
+    flex-direction: row; /* sidebar зліва, контент справа */
+  }
+
+  .imagesBlock {
+    flex: 1;
+  }
+}
+
+/* Desktop (приблизно ≥1200px) */
+@media (min-width: 1200px) {
+  .wrapper {
+    flex-direction: row;
+  }
+
+  .imagesBlock {
+    flex: 1;
+  }
 }
