--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 /* -------- IMPORTS -------- */
 @import "normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import "swiper/css";
 @import "swiper/css/navigation";
 @import "swiper/css/scrollbar";
