--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 /* -------- THEME VARIABLES -------- */
 :root {
   /* Шрифти */
-  --font-main: "Inter", sans-serif;
+  --font-main: "Nunito", sans-serif;
 
   /* Mobile First: dark theme за замовчуванням */
   --bg: #000;
@@ -330,7 +330,7 @@ button {
   --btn-bg-active: #00bfa6;
 
   /* Текст кнопки */
-  --btn-font-family: "Inter", sans-serif;
+  --btn-font-family: "Nunito", sans-serif;
   --btn-font-weight: 500;
   --btn-font-size: 16px;
   --btn-text-color: #f9fafb;
@@ -357,7 +357,7 @@ button {
   transition:
     background 0.4s ease,
     transform 0.3s ease,
-    box-shadow 0.3s ease;
+    /* box-shadow 0.3s ease; */
 }
 
 .btnfullcolor:hover {
