--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.footer {
+/*.footer {
   margin-top: auto;
   padding: 1rem;
   background-color: var(--card-bg);
@@ -51,4 +51,4 @@
   .link::after {
     display: none;
   }
-}
+}*/
