--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,7 +1,9 @@
 .header {
   background-color: var(--accent);
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
 }
 
