--- a/components/FAQ/faq.module.css
+++ b/components/FAQ/faq.module.css
@@ -5,3 +5,91 @@
 .imagesBlock {
   width: 100%;
 }
+.container {
+  max-width: 1248px;
+  margin: 0 auto;
+}
+.faq__title {
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px; /* расстояние между иконками и текстом */
+  margin-bottom: 32px;
+}
+.faq__title::before,
+.faq__title::after {
+  content: "";
+  display: inline-block;
+  width: 91px;
+  height: 24px;
+  background-repeat: no-repeat;
+}
+
+.faq__title::before {
+  background-image: url("/icons/vector-left.svg");
+}
+.faq__title::after {
+  background-image: url("/icons/vector-right.svg");
+}
+.faq__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.faq__box-image {
+  width: 575px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-right: 77px;
+}
+.faq__list {
+  max-width: 610px;
+  width: 100%;
+  list-style: none;
+}
+
+.faq__item {
+  padding: 26px 32px;
+  border-radius: 20px;
+  background-color: #fff;
+  box-shadow: 0px 1px 4px 0px #19213d0f;
+  transition: all 0.4s;
+}
+.faq__item:hover {
+  box-shadow: 0px 1px 4px 0px #19213d8f;
+}
+.faq__item:not(:last-child) {
+  margin-bottom: 4px;
+}
+.faq__item-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.faq__item-title {
+  max-width: 482px;
+  margin: 0;
+  padding: 0;
+}
+.faq__item-icon {
+  width: 34px;
+  height: 34px;
+  color: #1f2937;
+  fill: #e5e7eb;
+  transition:
+    color 0.4s ease,
+    transform 0.3s ease-in-out,
+    fill 0.3s ease-in-out;
+}
+.faq__item-icon:hover {
+  transform: rotate(90deg);
+  color: #fff;
+  fill: #6c63ff;
+}
+
+.faq__item-text {
+  display: none;
+  margin-top: 16px;
+}
