--- a/components/Howitworks/howitworks.module.css
+++ b/components/Howitworks/howitworks.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   gap: 16px;
 }
 
@@ -33,10 +33,10 @@
 .howitworks__box-title {
   font-size: 20px;
   margin-bottom: 8px;
-  text-align: center;
 }
 
 .howitworks__box-list {
+  list-style: none;
   padding: 0;
   margin: 0;
 }
