--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -5,17 +5,20 @@
 .container {
   max-width: 1248px;
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 .hero {
+  margin-top: 76px; /* отступ под хедер  */
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 24px;
   flex-wrap: wrap; /* щоб на мобілках блоки падали вниз */
+  padding-top: 121px; /* отступ с веху по макету  */
+  padding-bottom: 57px; /* отступ внизу по макету  */
 }
 
 .hero__container {
@@ -25,43 +28,42 @@
 }
 
 .hero__title {
-  /*font-weight: 700;  
-  font-size: 58px;
-  line-height: 64px;*/
   font-style: normal;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.178);
-
-  background: linear-gradient(90deg, #00bfa6, #5676e5, #6c6ce5, #6c63ff);
-
+  background: linear-gradient(90deg, #6c63ff, #413b99);
   /* кросбраузерна підтримка */
   background-clip: text;
   -webkit-background-clip: text;
-
   -webkit-text-fill-color: transparent;
   color: transparent; /* fallback */
-
   margin-bottom: 32px;
 }
 
 .hero__text {
-  font-weight: 400;
-  font-size: 24px;
   margin-bottom: 32px;
-  padding-right: 27px;
-  text-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
+  padding-right: 40px;
 }
 
 .hero__btn {
-  display: inline-block;
-  width: 188px;
-  height: 44px;
   padding: 12px 55px;
   border-radius: 5px;
+  background-color: #6c63ff;
+}
+
+.hero__btn:hover {
+  background: var(--btn-bg-hover);
+  transform: scale(1.05);
+  /* box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25); */
+}
+
+.hero__btn:active {
+  background: var(--btn-bg-active);
+  transform: scale(0.97);
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); */
 }
 
 .hero__image {
-  width: 537px;
-  max-width: 100%;
+  max-width: 537px;
+  width: 100%;
   height: auto;
   display: block;
   flex: 1;
