--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,54 +1,52 @@
-/*.footer {
-  margin-top: auto;
-  padding: 1rem;
-  background-color: var(--card-bg);
-  text-align: center;
-  font-size: 0.9rem;
-  color: #aaa;
-  transition: background-color var(--transition-base);
+.footer {
+  border-radius: 16px 16px 0 0;
+  padding: 64px 96px;
+  background-color: var(--background-viol);
+}
+.subtitle {
+  background-color: brown;
+}
+.footernav {
+  background-color: greenyellow;
+}
+.nav_inner {
+  background-color: crimson;
+}
+.polisy_inner {
+  background-color: darkred;
 }
 
-.footer:hover {
-  background-color: rgb(var(--accent-rgb) 0.2);
-  color: var(--bg);
+.subtitle {
+  background-color: darkred;
 }
-
-.text {
-  margin: 0;
+.navlink {
+  background-color: blueviolet;
 }
-
+.linkpolicy {
+  background-color: paleturquoise;
+}
+.legalnav {
+  background-color: lightseagreen;
+}
+.socials {
+  background-color: peachpuff;
+}
+.socialButton {
+  background-color: lightsalmon;
+}
+.socials_inner {
+  background-color: blue;
+}
+.socialButton {
+  background-color: lightcoral;
+}
+.developer_inner {
+  background-color: darkorchid;
+}
+.text,
 .link {
-  color: var(--accent);
-  text-decoration: none;
-  font-weight: 600;
-  position: relative;
-  transition: color var(--transition-base);
+  line-height: 2.14;
+  text-align: center;
+  color: --text-main;
+  opacity: 0.6;
 }
-
-.link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -2px;
-  width: 100%;
-  height: 2px;
-  background: var(--accent);
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.3s ease;
-}
-
-.link:hover::after {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-
-.link:hover {
-  color: var(--text);
-}
-
-@media (hover: none) {
-  .link::after {
-    display: none;
-  }
-}*/
