--- a/components/Features/features.module.css
+++ b/components/Features/features.module.css
@@ -1,26 +1,10 @@
-.features__title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-.features__title::before,
-.features__title::after {
-  display: inline-block;
-  content: "";
-  width: 91px;
-  height: 24px;
-  background-repeat: no-repeat;
-}
-.features__title::before {
-  background-image: url("/icons/vector-left.svg");
-}
 .features__title::after {
   background-image: url("/icons/vector-right.svg");
 }
 .features__box {
   border-radius: 25px;
-  background-color: #bebee27c;
+  backdrop-filter: blur(40px);
+  background: var(--background-viol);
   padding: 24px 24px;
 }
 .features__box-title {
@@ -34,7 +18,6 @@
   /* list-style-position: inside; */
   margin-bottom: 3px;
 }
-
 .features__box-item {
   display: flex;
   align-items: center;
@@ -43,7 +26,6 @@
   margin-bottom: 8px;
   position: relative;
 }
-
 .features__box-item::before {
   content: "•";
   font-size: 22px;
@@ -56,7 +38,6 @@
   line-height: 100%;
   letter-spacing: 0%;
 }
-
 .features__inner {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -64,7 +45,6 @@
   grid-column-gap: 24px;
   grid-row-gap: 24px;
 }
-
 .features__box:nth-child(1) {
   grid-row: span 2 / span 2;
 }
