--- a/app/globals.css
+++ b/app/globals.css
@@ -351,3 +351,8 @@ button {
 }
 
 /* -------- ДОПИСАТИ ДЛЯ СЕКЦІЙ МЕДІАПРАВИЛА -------- */
+
+/* Добавила плавный переход по секциям  */
+html {
+  scroll-behavior: smooth;
+}
