--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -47,18 +47,20 @@
   padding: 12px 55px;
   border-radius: 5px;
   background-color: #6c63ff;
+  transition:
+    background 0.3s ease-in-out,
+    transform 0.2s ease-in-out;
 }
 
 .hero__btn:hover {
-  background: var(--btn-bg-hover);
   transform: scale(1.05);
-  /* box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25); */
+  background: linear-gradient(to right, #6c63ff, #413b99);
 }
 
 .hero__btn:active {
   background: var(--btn-bg-active);
   transform: scale(0.97);
-  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); */
+  background-color: #00bfa6;
 }
 
 .hero__image {
